--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
-    "googleapis": "^164.1.0"
+    "googleapis": "^164.1.0",
+    "node-notifier": "^10.0.1"
   }
 }
